# prg1k

./: .cspell.json  .gitignore
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
scripts/: .eslintignore  .eslintrc.json  bun.lockb  package.json  tsconfig.json
scripts/src/: _hoge.ts  index.ts
src/: 01_issue1.c
src/01/: issue1.c  issue2.c
src/02/: 01_helloWorld.c  03_lineA.c  04_sharpA.c  05_add.c  issue1.c
src/03/: 03_calc.c  05_scan2.c  06_scancalc.c  07_rectangle.c  08_remainder.c  09_xxx.c  10_vector.c  issue1.c  issue2.c
src/04/: 02_rectangle.c  05_average.c  06_if1.c  challenge1.c  challenge2.c  issue1.c
src/05/: 01_if1.c  02_if2.c  03_ifelse1.c  04_ifelse2.c  07_ifand.c  08_nested.c  09_calcFor.c  10_hello1000.c  challenge1.c  issue1.c
src/06/: 01_if.c  03_loopNum.c  05_scanLoop.c  06_even1.c  08_even2.c  09_qq1.c  10_qq2.c  challenge1.c  issue1.c
src/07/: 02_swap2.c  04_countup.c  07_biggest.c  08_qq3.c
src/08/: 01_rectangle.c  03_hello10.c  04_calcWhile.c  05_tillzero.c  07_tillzero3.c  challenge1.c  issue1.c
src/09/: 03_switch3.c  06_reverse.c  challenge1.c  challenge2.c  issue1.c
src/10/: 01_arraysum.c  02_arrayinput.c  07_arraycomplex.c  challenge1.c  challenge1_origin.c
src/11/: 02_string2.c  04_dispstr2.c  04_dispstr2w.c  05_scan_rev.c  06_countA.c  challenge1.c  issue1.c
src/12/: 03_heightWeight2.c  04_heightWeight3.c  05_compare.c  06_comparefunc.c  07_addfunc.c
src/13/: 01_sub.c  02_add.c  04_sin.c  05_sinFunc.c  06_macroTest.c  07_macroSum.c  (+1 more)
src/final-assignment/: 15_issue_k24132.c  CMakeLists.txt  README.txt  main.c
src/final-assignment/lib/: consts.c  dir.c  file.c  types.c  validate.c  zip.c
src/final-assignment/lib/ftxui/: bindings.cpp  bindings.h  utils.cpp
src/final-assignment/lib/ftxui/screens/: 1_user_data.cpp  2_dir_struct_filter.cpp  2_dir_struct_filtered.cpp  3_dir_struct_renamed.cpp  3_dir_struct_renaming.cpp
src/final-assignment/tests/: test.c
(+233 files in other folders)
